Fixed spacing between main elements 	modified:   less/main.less 	modified:   main.css

--- a/less/main.less
+++ b/less/main.less
@@ -78,19 +78,17 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  @contentPad: 5em;
+  @contentPad: 2.5em;
   .container {
     display: flex;
-    flex-direction: row;
     justify-content: center;
-    align-content: center;
     .content {
-      margin-top: @contentPad;
+      margin: @contentPad 0;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      &:last-of-type {
-        margin-bottom: @contentPad;
+      &:first-child {
+        margin-top: @contentPad * 2;
       }
     }
     .card-shadow {
@@ -100,9 +98,8 @@ main {
   }
   hr {
     position: relative;
-    top: 20px;
     border: 0;
-    border-top: 1px solid #ccc;
+    border-top: 2px solid #ccc;
     width: @contentWidth;
     margin: auto;
   }
@@ -172,12 +169,15 @@ main {
     @media @max {
       .content {
         width: 50%;
-        height: 1000px;
         #text {
           width: 100%;
           margin-bottom: 5em;
+          h1 {
+            margin: 1ch 0;
+          }
           p {
-            margin: 5em;
+            margin: 3em;
+            margin-top: 0;
           }
         }
         #image img {
@@ -189,6 +189,9 @@ main {
   }
 
   // Diensten ---------------
+  .container:last-of-type {
+    // background-color: red;
+  }
   #diensten {
     display: flex;
     flex-direction: column;
